Enhance javadocs 2 (#31)
* Add a standalong Javadoc structure

* Enhance javadoc builds to support params and returns and better rendering

* Add missing javadocs to adders and fromNode

* Fix a typo

* Fix project name

* Add some more mising javadocs to fromNode

* Fix the previously added javadocs

* Add javadoc to the builders

* Use List.of instead of Collections

* Update tests for new javadocs